Fixed profile photos image cut off + code cleanup + structure cleanup

--- a/style/style.css
+++ b/style/style.css
@@ -391,7 +391,8 @@ img.fillheight {
 #rbprofile #profile-picture { background: #e9e9e9; padding: 7px; float: left; }
 #rbprofile #profile-picture img { max-width: 100%; float: left; }
 .rbcolumn .addthis_toolbox { margin-bottom: 15px; padding: 7px; background: #ddd; }
-.rblayout #photos .photo { vertical-align: top; }
+.rblayout .profile-photos { padding: 10px 0px 0px 10px; background: #e9e9e9; overflow: hidden; }
+.rblayout .profile-photos .photo { vertical-align: top; float: left; margin: 0px 10px 10px 0px; }
 
 #video_player {height:500px; width:66%;}
 #video_player .vids{height:500px; width:100%; display:none; position:absolute; z-index:0; top:0px; left:0px;}
@@ -464,6 +465,11 @@ img.fillheight {
 #profile-links a { display: block; border: 1px solid #ddd; border-top: none; padding: 5px 10px }
 #profile-links a:first-child { border-top-left-radius: 3px; border-top-right-radius: 3px; border-top: 1px solid #ddd; }
 #profile-links a:last-child { border-bottom-left-radius: 3px; border-bottom-right-radius: 3px; }
+
+/* Print Profile Photos */
+#print-photos form .print-photo { float: left; margin: 0px 3px 7px 3px; border: 1px solid #ddd; }
+#print-photos form .print-photo .print-action { padding: 5px 3px; background: #eee; }
+#print-photos form > a img { float: left; margin: 0px 10px 10px 0px; }
 
 /* Button Group */
 .rbbtn-group { margin-bottom: 15px; }
