--- a/view/layout/01/css/style.css
+++ b/view/layout/01/css/style.css
@@ -3,7 +3,3 @@
 #rblayout-one #profile-picture,
 #rblayout-one #links,
 #rblayout-one #stats { margin: 0px 0px 30px 0px; }
-#rblayout-one #photos { padding: 7px 7px 0px 7px; background: #e9e9e9; }
-#rblayout-one #photos img { height: 150px; float: left; margin: 0px 3px 7px 3px; }
-#rblayout-one #photos a:first-of-type img { margin-left: 0px; }
-#rblayout-one #photos a:last-of-type img { margin-right: 0px; }
